https twitter img link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="twitter:creator" content="@_itsjp">
   <meta name="twitter:title" content="Watch Paint Dry Online">
   <meta name="twitter:description" content="Spend all day watching paint dry, because like you have anything better to do?">
-  <meta name="twitter:image" content="http://watchpaintdry.online/img/twitter-bg.png">
+  <meta name="twitter:image" content="https://watchpaintdry.online/img/twitter-bg.png">
 
   <meta property="og:title" content="Watch Paint Dry Online" />
   <meta property="og:type" content="website" />
