--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <title>Watch Paint Dry Online</title>
+  <title>Watch Paint Dry</title>
   <meta name="description" content="Spend all day watching paint dry, because like you have anything better to do?">
-  <meta name="author" content="Jp Archer">
+  <meta name="author" content="JP Archer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/app.css">
-
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@_itsjp">
   <meta name="twitter:creator" content="@_itsjp">
-  <meta name="twitter:title" content="Watch Paint Dry Online">
+  <meta name="twitter:title" content="Watch Paint Dry">
   <meta name="twitter:description" content="Spend all day watching paint dry, because like you have anything better to do?">
-  <meta name="twitter:image" content="https://watchpaintdry.online/img/twitter-bg.png">
-
-  <meta property="og:title" content="Watch Paint Dry Online" />
+  <meta name="twitter:image" content="https://www.jparcher.com/watch-paint-dry/img/twitter-bg.png">
+  <meta property="og:title" content="Watch Paint Dry" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://watchpaintdry.online/" />
-  <meta property="og:image" content="https://watchpaintdry.online/img/twitter-bg.png" />
+  <meta property="og:url" content="https://www.jparcher.com/watch-paint-dry/" />
+  <meta property="og:image" content="https://www.jparcher.com/watch-paint-dry/img/twitter-bg.png" />
   <meta property="og:description" content="Spend all day watching paint dry, because like you have anything better to do?" />
 </head>
 
@@ -32,21 +28,7 @@
     </div>
   </div>
   <div style="display:none">
-    <h1>Watch paint dry online</h1>
+    <h1>Watch paint dry online, because like you have anything better to do?</h1>
   </div>
 </body>
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-  i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-    (i[r].q = i[r].q || []).push(arguments)
-  }, i[r].l = 1 * new Date(); a = s.createElement(o),
-    m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-  ga('create', 'UA-85740439-1', 'auto');
-  ga('send', 'pageview');
-</script>
-<script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5802019b892e4a4a"></script>
-
 </html>
