--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <meta name="twitter:creator" content="@_itsjp">
   <meta name="twitter:title" content="Watch Paint Dry">
   <meta name="twitter:description" content="Spend all day watching paint dry, because like you have anything better to do?">
-  <meta name="twitter:image" content="https://www.jparcher.com/watch-paint-dry/img/twitter-bg.png">
+  <meta name="twitter:image" content="https://www.jparcher.com/watch-paint-dry/img/bg2.jpg">
   <meta property="og:title" content="Watch Paint Dry" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.jparcher.com/watch-paint-dry/" />
-  <meta property="og:image" content="https://www.jparcher.com/watch-paint-dry/img/twitter-bg.png" />
+  <meta property="og:image" content="https://www.jparcher.com/watch-paint-dry/img/bg1.jpg" />
   <meta property="og:description" content="Spend all day watching paint dry, because like you have anything better to do?" />
 </head>
 
