--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <meta property="og:url" content="https://www.jparcher.com/watch-paint-dry/" />
   <meta property="og:image" content="https://www.jparcher.com/watch-paint-dry/img/twditter-bg.png" />
   <meta property="og:description" content="Spend all day watching paint dry, because like you have anything better to do?" />
-
+<!-- Pixel Code for https://www.widgetsquad.com/ -->
+<script async src="https://www.widgetsquad.com/pixel/z0acibz7h75kslc05r43eh9ytgmxf8tt"></script>
+<!-- END Pixel Code -->
 </head>
 
 <body>
