--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script async src="https://www.widgetsquad.com/pixel/z0acibz7h75kslc05r43eh9ytgmxf8tt"></script>
 <!-- END Pixel Code -->
   <title>Watch Paint Dry</title>
-  <img src="http://paintdrying.cc/img/bg.jpeg" alt="paint">
+  <img src="http://paintdryindg.cc/img/bg.jpeg" alt="paint">
   <meta name="description" content="Spend all day watching paint dry, because like you have anything better to do?">
   <meta name="author" content="JP Archer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
