--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <!-- Pixel Code for https://www.widgetsquad.com/ -->
-<script async src="https://www.widgetsquad.com/pixel/z0acibz7h75kslc05r43eh9ytgmxf8tt"></script>
-<!-- END Pixel Code -->
+   <a href='https://www.versicherungen.at/'>Versicherungen Rechner</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=bfda0aee7ab02fed5d2631947291e7b5820f5b47'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1262618/t/3"></script>
   <title>Watch Paint Dry</title>
-  
+  <meta name="description" content="Spend all day watching paint dry, because like you have anything better to do?">
+  <meta name="author" content="JP Archer">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/app.css">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@_itsjp">
+  <meta name="twitter:creator" content="@_itsjp">
+  <meta name="twitter:title" content="Watch Paint Dry">
+  <meta name="twitter:description" content="Spend all day watching paint dry, because like you have anything better to do?">
+  <meta name="twitter:image" content="https://www.jparcher.com/watch-paint-dry/img/twidtter-bg.png">
+  <meta property="og:title" content="Watch Paint Dry" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.jparcher.com/watch-paint-dry/" />
+  <meta property="og:image" content="https://www.jparcher.com/watch-paint-dry/img/twditter-bg.png" />
+  <meta property="og:description" content="Spend all day watching paint dry, because like you have anything better to do?" />
 </head>
 
 <body>
