--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-   <a href='https://www.versicherungen.at/'>Versicherungen Rechner</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=bfda0aee7ab02fed5d2631947291e7b5820f5b47'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1262618/t/3"></script>
+   <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8fff7adca39e8b07cb28eb4596581d4b590f5a4e'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1262619/t/1"></script>
   <title>Watch Paint Dry</title>
   <meta name="description" content="Spend all day watching paint dry, because like you have anything better to do?">
   <meta name="author" content="JP Archer">
