--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-   <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=8fff7adca39e8b07cb28eb4596581d4b590f5a4e'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1262619/t/1"></script>
+   <!-- Pixel Code for https://www.widgetsquad.com/ -->
+<script async src="https://www.widgetsquad.com/pixel/z0acibz7h75kslc05r43eh9ytgmxf8tt"></script>
+<!-- END Pixel Code -->
   <title>Watch Paint Dry</title>
   <meta name="description" content="Spend all day watching paint dry, because like you have anything better to do?">
   <meta name="author" content="JP Archer">
