--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
    <!-- Pixel Code for https://www.widgetsquad.com/ -->
 <script async src="https://www.widgetsquad.com/pixel/z0acibz7h75kslc05r43eh9ytgmxf8tt"></script>
 <!-- END Pixel Code -->
+  <script>
+    if (window.location.host.indexOf('github.io') > -1 && window.location.protocol == "https:"){
+        window.location.protocol = "http";
+    }
+</script>
   <title>Watch Paint Dry</title>
   <meta name="description" content="Spend all day watching paint dry, because like you have anything better to do?">
   <meta name="author" content="JP Archer">
