--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     }
 </script>
   <title>Watch Paint Dry</title>
+<!-- begin wwww.htmlcommentbox.com -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%244iJb5R4bGPeHEVpp9RPq40"+"&opts=16798&num=10&ts=1731939606362");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end www.htmlcommentbox.com -->
   <meta name="description" content="Spend all day watching paint dry, because like you have anything better to do?">
   <meta name="author" content="JP Archer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
