--- a/index.html
+++ b/index.html
@@ -29,4 +29,13 @@
     <h1>Watch paint dry online, because like you have anything better to do?</h1>
   </div>
 </body>
+</head>
+<body>
+  <div class="vh">
+    <div class="live">
+      <span class="dot"></span>
+      <span>LIVE</span>
+    </div>
+  </div>
+  <div style="display:none">
 </html>
