--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
   <meta property="og:url" content="https://www.jparcher.com/watch-paint-dry/" />
   <meta property="og:image" content="https://www.jparcher.com/watch-paint-dry/img/twditter-bg.png" />
   <meta property="og:description" content="Spend all day watching paint dry, because like you have anything better to do?" />
-    <h1>Watch paint dry online, because like you have anything better to do?</h1>
-  </div>
-</body>
+    <h1>Watch paint dry online, because like you have anything better to do?</h1> 
 </head>
+ 
 <body>
   <div class="vh">
     <div class="live">
@@ -37,5 +36,9 @@
       <span>LIVE</span>
     </div>
   </div>
- 
+  <div style="display:none">
+    <h1>Watch paint dry online, because like you have anything better to do?</h1>
+  </div>
+</body>
+</html>
 </html>
