--- a/lounge.html
+++ b/lounge.html
@@ -1,1 +1,20 @@
+<head>
+</script>
+  <title>Watch Paint Dry</title>
+  <meta name="description" content="Spend all day watching paint dry, because like you have anything better to do?">
+  <meta name="author" content="JP Archer">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/app.css">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@_itsjp">
+  <meta name="twitter:creator" content="@_itsjp">
+  <meta name="twitter:title" content="Watch Paint Dry">
+  <meta name="twitter:description" content="Spend all day watching paint dry, because like you have anything better to do?">
+  <meta name="twitter:image" content="https://www.jparcher.com/watch-paint-dry/img/twidtter-bg.png">
+  <meta property="og:title" content="Watch Paint Dry" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.jparcher.com/watch-paint-dry/" />
+  <meta property="og:image" content="https://www.jparcher.com/watch-paint-dry/img/twditter-bg.png" />
+  <meta property="og:description" content="Spend all day watching paint dry, because like you have anything better to do?" />
 
+</head>
