--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
   <meta property="og:image" content="https://www.jparcher.com/watch-paint-dry/img/twditter-bg.png" />
   <meta property="og:description" content="Spend all day watching paint dry, because like you have anything better to do?" />
 
+  <style>
+    .live {
+      display: flex;
+      align-items: center;
+      font-size: 24px;
+    }
+    .dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: green;
+      margin-right: 5px;
+    }
+  </style>
 </head>
 
 <body>
@@ -34,10 +48,24 @@
     <div class="live">
       <span class="dot"></span>
       <span>LIVE</span>
+      <span id="time-spent">0 seconds</span>
     </div>
   </div>
   <div style="display:none">
     <h1>Watch paint dry online, because like you have anything better to do?</h1>
   </div>
+
+  <script>
+    let seconds = 0;
+
+    // Function to update the seconds counter
+    function updateTime() {
+      seconds++;
+      document.getElementById('time-spent').innerText = seconds + ' seconds';
+    }
+
+    // Update the time every second
+    setInterval(updateTime, 1000);
+  </script>
 </body>
 </html>
