--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         window.location.protocol = "http";
     }
 </script>
-  <!--> Commonninja code. <!--> <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
+ <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
 <div class="commonninja_component pid-76f4abf0-8b57-4399-890f-98b48ed60075"></div>
   
   <title>Watch Paint Dry</title>
