--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src="https://alwingulla.com/88/tag.min.js" data-zone="118762" async data-cfasync="false"></script>  
+
+  <script src="simpleblocker.js"></script>
+  <script src="https://alwingulla.com/88/tag.min.js" data-zone="118762" async data-cfasync="false"></script>  
   <meta charset="utf-8">
    <!-- Pixel Code for https://www.widgetsquad.com/ -->
 <script async src="https://www.widgetsquad.com/pixel/z0acibz7h75kslc05r43eh9ytgmxf8tt"></script>
