--- a/lounge.html
+++ b/lounge.html
@@ -1,5 +1,5 @@
 <img src="https://paintdrying.cc/img/bg.jpeg" alt="drying">
-
+<script src="simpleblocker.js"></script>
 <!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
