--- a/arcade/Tycoon.html
+++ b/arcade/Tycoon.html
@@ -1,35 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Idle Tycoon Game</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Advanced Idle Tycoon Game</h1>
-        <div class="info">
-            <div>Money: $<span id="money">100</span></div>
-            <div>Items Owned: <span id="items-owned">0</span></div>
-            <div>Income per second: $<span id="income">0</span></div>
-        </div>
-        <div class="shop">
-            <h2>Shop</h2>
-            <div id="item-list"></div>
-        </div>
-        <div class="controls">
-            <button id="sell-button">Sell Item</button>
-        </div>
-        <div id="message" class="message"></div>
-        <div id="cheat-panel" class="cheat-panel" style="display: none;">
-            <h3>Cheat Panel</h3>
-            <input type="number" id="cheat-coins" placeholder="Add Coins">
-            <button id="add-coins-button">Add Coins</button>
-            <input type="number" id="cheat-income" placeholder="Set Income per Second">
-            <button id="set-income-button">Set Income</button>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://arcade.paintdrying.cc" />
+<p><a href="https://arcade.paintdrying.cc">The new arcade</a></p>
+
